<resources>
    <string name="app_name">Fruity App</string>

    <string name="title_activity_registration">Registration</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="register">Register</string>
    <string name="about_activity_title">About Us</string>
    <string name="about_activity_description"><b>Boost Your Brand and Company Image with Premium Online Printing Services from Us ! </b></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="domain">Domain</string>
    <string name="website">fruityapp.com</string>
    <string name="licence">License</string>
    <string name="licencedesc">Lorem Ipsum</string>
    <string name="changelog">Changelog</string>
    <string name="changes">Lorem Ipsum</string>
    <string name="login">Login</string>
    <string name="wishlist">Wishlist</string>
    <string name="forgot">Forgot Password</string>
    <string name="register_now">Register Now</string>
    <string name="already_mem">Already a member ? </string>
    <string name="login_now">Login Now</string>

    <!--Navigation drawer items-->
    <string name="home">Home</string>
    <string name="myprofile">Profile</string>
    <string name="myorders">My Orders</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="aboutapp">About App</string>
    <string name="rate">Rate Us</string>
    <string name="helpcentre">Help Center</string>
    <string name="noconnection">Kindly connect to a WIFI network or enable Mobile Data</string>
    <string name="help">In case of any query feel free to reach us at : \n    fruityapp@gmail.com\n\nYou can also Call us at our helpline numbers : \n     +91–9291299322 \n     +91–8732883291</string>
    <string name="magic_points">Magic Points</string>
    <string name="orders_placed">Orders Placed</string>
    <string name="items_incart">Items inCart</string>
    <string name="my_profile">My Profile</string>
    <string name="update_details">Update Details</string>
    <string name="chooselocation">Choose Location</string>
    <string name="update">Update</string>
    <string name="send_otp">Send OTP</string>
    <string name="back">Back</string>

    <string name="send_password1">Here is your account password for Magic Print ! \n\n    Password :  </string>
    <string name="send_password2">\n\n Sorry to know that you forgot your password ! I guess it\'s the right time to get a memory booster !\n\n Just Joking ! No Offence Please !
    \n\n With Regards, \n ToNy \n (Fruity App)</string>
    <string name="select_category">Select Category</string>
    <string name="registermail1">\n This is Tony , Co-Founder of Bellenorthe Dynamics ! \n\nWelcome onboard with us on behalf of our team !\n
    We promise to provide unforgettable shopping experience to you in future ! \n\n
    So What are you waiting for , start shopping and get best of our products right at your doorstep !
    \n\n
    We are happy to help you ! In case of any query contact us at our handles mentioned below !\n\n
    Phone : +1234567890987\n
    Email : mail@bellenorthedynamics.com\n
    Address : Nivana Towers Westlands</string>
    <string name="title_activity_process_order">ProcessOrder</string>
    <string name="orderdetails">Your Order has been Placed Successfully. \n Here is your Unique Order Id !</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Fresh Products</string>
    <string name="slide_1_desc">Get fresh fruits and only available at our shops !</string>

    <string name="slide_2_title">Cheap Rates</string>
    <string name="slide_2_desc">Products at such an affordable rates !</string>

    <string name="slide_3_title">Hassle Free Payments</string>
    <string name="slide_3_desc">With various pay options , you can easily pay in a minute !</string>

    <string name="slide_4_title">Fast Delivery</string>
    <string name="slide_4_desc">Blazing fast order delivery within time !</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="visiting_cards">Fruits</string>
    <string name="t_shirts">Vegez</string>
    <string name="stationary">Stationary</string>
    <string name="bags">Bags</string>
    <string name="we_are_best_at">We are best at</string>
    <string name="keychains">Keychains</string>
    <string name="calendars">Calendars</string>
    <string name="price">Price</string>
    <string name="product">Product</string>
    <string name="denim_shirt">Denim Shirt</string>
    <string name="delivery_charge_free">Delivery charge: FREE</string>
    <string name="qty_1">Qty: 1</string>
    <string name="rs_8_999">Rs. 8,999</string>
    <string name="u2022_regular_fit_full_sleeve">• Regular fit, full sleeve</string>
    <string name="buy_now">BUY NOW</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="content">Content</string>
    <string name="header">Header</string>
    <string name="your_custom_message">Your Custom Message</string>
    <string name="details">Details</string>
    <string name="similar">Similar</string>
    <string name="quantity">Quantity:</string>
    <string name="rs_1_979">Rs. 1,979</string>
    <string name="free_delivery">FREE Delivery</string>
    <string name="dash">-</string>
    <string name="plus">+</string>
    <string name="share">Share</string>
    <string name="enter_password">Enter Password</string>
    <string name="showcase">SHOWCASE</string>
    <string name="my_cart">MYCART</string>
    <string name="checkout">CHECKOUT</string>
    <string name="rashi_gmail_com">youremail@gmail.com</string>
    <string name="get_password">Get Password</string>
    <string name="order_details">Order Details</string>
    <string name="total_no_of_items">Total No. of Items :</string>
    <string name="_10">10</string>
    <string name="total_amount">Total Amount :</string>
    <string name="_15000">15000</string>
    <string name="estimated_delivery_date">Estimated Delivery Date :</string>
    <string name="_28_12_2017">28/12/2017</string>
    <string name="payment_mode">Payment Mode :</string>
    <string name="complete_address">Complete Address :</string>
    <string name="pincode">Pincode</string>
    <string name="profile" />
    <string name="my_wishlist">My Wishlist</string>
    <string name="update_mobile_number">Update Mobile Number</string>
    <string name="update_your_email">Update Your Email</string>
    <string name="update_your_name">Update Your Name</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="update_profile">Update Profile</string>
    <string name="i">|</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="reenter_password">Reenter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="fvf1ff12t">FVF1FF12T</string>
    <string name="todo">TODO</string>
    <string name="notifications">Notifications</string>
</resources>
