<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_medium">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:layout_marginStart="5sp"
            android:id="@+id/image_cartlist" android:layout_width="0sp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:src="@drawable/drawerback"
            android:contentDescription="@string/todo" />

        <LinearLayout  android:id="@+id/layout_item_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10">

                <TextView
                    android:id="@+id/cart_prtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/denim_shirt"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_xmedium"
                    android:textStyle="bold"
                    android:layout_weight="9"/>

                <ImageView
                    android:padding="5dp"
                    android:id="@+id/deletecard"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_clear_black_18dp"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <TextView
                android:id="@+id/cart_prprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs_8_999"
                android:textSize="@dimen/text_size_xmedium"
                android:textColor="#4CAF50"
                android:layout_marginTop="@dimen/margin_small"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_charge_free"
                android:textSize="@dimen/text_size_small"/>

            <TextView
                android:id="@+id/cart_prcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty_1"
                android:textSize="@dimen/text_size_small"/>

        </LinearLayout>
    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="@dimen/view_width_small"
        android:background="@color/grey_light"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
</LinearLayout>