<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_item_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".IndividualProduct"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbarwrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="fill_parent"
            android:layout_height="58dp"
            android:background="@color/colorAccent"
            android:minHeight="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/product"/>


            <LinearLayout
                android:orientation="horizontal"
                android:gravity="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/notification"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"
                    android:onClick="Notifications"
                    android:contentDescription="@string/todo" />


            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView android:id="@+id/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:scrollbars="none"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productimage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/drawerback"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/productname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/denim_shirt"
                    android:textSize="16sp"
                    android:textColor="@color/gen_black"/>
                <TextView
                    android:id="@+id/productprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/rs_1_979"
                    android:textSize="20sp"
                    android:textColor="@color/gen_black"
                    />
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_delivery"
                    android:textSize="12sp"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/quantity"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <Button
                    android:id="@+id/decrementQuantity"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:backgroundTint="#eeeeee"
                    android:text="@string/dash"
                    android:onClick="decrement"/>

                <EditText
                    android:id="@+id/quantityProductPage"
                    android:layout_width="40dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:inputType="number"
                    tools:text="1"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/incrementQuantity"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:backgroundTint="#eeeeee"
                    android:text="@string/plus"
                    android:onClick="increment"/>

            </LinearLayout>

            <View android:layout_width="match_parent"
                android:layout_height="@dimen/view_width_small"
                android:background="@color/grey_light"
                android:layout_marginTop="8sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_marginTop="8sp"
                android:weightSum="3">

                <LinearLayout android:id="@+id/layout_action1"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:onClick="shareProduct">
                    <ImageView
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:src="@drawable/share"
                        android:contentDescription="@string/todo" />
                    <TextView android:id="@+id/text_action1"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8sp"
                        android:text="@string/share"
                        android:textSize="12sp"
                        android:textColor="@color/gen_black"
                        android:gravity="start"/>
                </LinearLayout>

                <View android:layout_width="@dimen/view_width_small"
                    android:layout_height="match_parent"
                    android:background="@color/grey_light"/>

                <LinearLayout android:id="@+id/layout_action2"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:onClick="similarProduct">
                    <ImageView android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:src="@drawable/similar"
                        android:contentDescription="@string/todo" />

                    <TextView android:id="@+id/text_action2"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8sp"
                        android:text="@string/similar"
                        android:textSize="12sp"
                        android:textColor="@color/gen_black"
                        android:gravity="start"/>
                </LinearLayout>

                <View android:layout_width="@dimen/view_width_small"
                    android:layout_height="match_parent"
                    android:background="@color/grey_light"/>

                <LinearLayout
                    android:id="@+id/layout_action3"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:onClick="addToWishList">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/add_to_wishlist"
                        android:layout_width="40sp"
                        app:lottie_fileName="heart.json"
                        android:layout_height="40sp"
                        android:foregroundGravity="center"
                        android:src="@drawable/cartempty"
                        android:visibility="visible"/>

                    <TextView android:id="@+id/text_action3"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8sp"
                        android:text="@string/wishlist"
                        android:textSize="12sp"
                        android:textColor="@color/gen_black"
                        android:gravity="start"/>
                </LinearLayout>
            </LinearLayout>
            <View android:layout_width="match_parent"
                android:layout_height="@dimen/view_width_small"
                android:background="@color/grey_light"
                android:layout_marginTop="8sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:textSize="16sp"
                    android:textColor="@color/gen_black"/>
                <TextView
                    android:id="@+id/productdesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:text="@string/u2022_regular_fit_full_sleeve"
                    android:textSize="12sp"
                    android:textColor="@color/gen_black"/>

            </LinearLayout>

            <View android:layout_width="match_parent"
                android:layout_height="@dimen/view_width_small"
                android:background="@color/grey_light"
                android:layout_marginTop="2sp"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_custom_message"
                android:textSize="16sp"
                android:textColor="@color/gen_black"
                android:layout_margin="10sp"/>

            <View android:layout_width="match_parent"
                android:layout_height="@dimen/view_width_small"
                android:background="@color/grey_light"
                android:layout_marginTop="2sp"/>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_labelColor="#34495e"
                app:mtf_image="@drawable/headertext"
                >

                <EditText
                    android:id="@+id/customheader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/header"
                    android:textColor="#424242"
                    android:textSize="15sp"
                    android:inputType="textMultiLine"
                    android:maxLines="3"
                    android:minLines="2"
                    android:scrollbars="vertical"
                    android:autofillHints="" />

            </com.github.florent37.materialtextfield.MaterialTextField>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_labelColor="#34495e"
                app:mtf_image="@drawable/bubble"
                android:layout_marginBottom="30dp"
                >

                <EditText
                    android:id="@+id/custommessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content"
                    android:textColor="#424242"
                    android:textSize="15sp"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="6"
                    android:scrollbars="vertical"
                    android:autofillHints="" />

            </com.github.florent37.materialtextfield.MaterialTextField>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="2"
        android:elevation="30sp"
        android:background="@color/gen_black">

        <TextView
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/gen_white"
            android:text="@string/add_to_cart"
            android:textSize="14sp"
            android:textColor="@color/gen_black"
            android:textStyle="bold"
            android:gravity="center"
            android:onClick="addToCart"/>

        <TextView
            android:id="@+id/buy_now"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/buy_now"
            android:textSize="14sp"
            android:textColor="@color/gen_white"
            android:textStyle="bold"
            android:gravity="center"
            android:onClick="goToCart"/>

    </LinearLayout>
</LinearLayout>